# nfl-data

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
R/: .gitkeep  (+3 more)
python/: conftest.py  pyproject.toml
python/model_training/decision_models/: SPEC.md  __init__.py  __main__.py  constants.py  features.py  ingest.py  pipeline.py  trainer.py  validate.py
python/model_training/play_level/: __main__.py  constants.py  fetcher.py  ingest.py  loso.py  pipeline.py  report.py  validate.py
python/model_training/track6_nfl_ep_wp/: __main__.py  features.py  fetcher.py  ingest.py  label.py  pipeline.py  trainer.py  validate.py
python/model_training/track7_nfl_models/: SPEC.md  __init__.py  __main__.py  constants.py  features.py  ingest.py  pipeline.py  trainer.py  validate.py
python/native_pbp/: __main__.py  build.py  cli.py  features.py  parity.py  parse.py  stat_ids.py
python/nfl_data_ingest/: __init__.py  __main__.py  cli.py  fetch.py
python/nfl_model_publish/: __init__.py  artifacts.py  builders.py  cli.py  decision_models_artifacts.py  qbr_builder.py  track7_artifacts.py
python/tests/: test_constants.py  test_decision_models_parity.py  test_decision_models_trainer_smoke.py  test_features.py  test_fetcher.py  test_figures_report.py  test_id_conventions.py  test_ingest.py  test_labels.py  test_metrics.py  test_pipeline.py  test_skeleton.py  test_track7_parity.py  test_track7_trainer_smoke.py  test_trainer_smoke.py  test_validate.py
python/tests/native_pbp/: test_build.py  test_cli.py  test_native_ingest.py  test_native_training.py  test_parity.py  test_parse.py  test_stat_ids.py  test_yardline.py
python/tests/nfl_data_ingest/: test_fetch.py
(+40 files in other folders)
