[project]
name = "nfl-data-pipeline"
version = "0.1.0"
description = "Builds NFL compiled play-by-play datasets + trains EP/WP/CP models from sportsdataverse/nfl-raw committed JSON; publishes to sportsdataverse-data."
requires-python = ">=3.11"
dependencies = [
    "sportsdataverse>=0.0.65",
    "polars>=1.0,<2.0",
    "pyarrow>=15.0",
    "requests>=2.28",
    "tqdm>=4.66",
]

[dependency-groups]
dev = ["pytest>=8.0"]

# NOTE: modeling dep-groups (figures = plotnine/scikit-misc; the xgboost/numpy training
# deps) are added in SP1 when native_pbp + track6_nfl_ep_wp move in. SP0 is scaffold-only.

[tool.pytest.ini_options]
markers = ["integration: whole-corpus or network test requiring fetched/cached JSON (deselected by default)"]
testpaths = ["tests"]
pythonpath = ["."]
addopts = '-m "not integration"'
